--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "librelink-client"
-version = "0.1.4"
+version = "0.1.5"
 edition = "2021"
 authors = ["Nathael Bonnal <pro.nathaelbonnal@gmail.com>"] 
 description = "SDK for LibreLink"
@@ -14,5 +14,7 @@ reqwest = { version = "0.12.5", features = ["json"] }
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
 tokio = "1.38.0"
+sha2 = "0.10.8"
+hex = "0.4"
 
 
